--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
   "name": "air-conditioner",
-  "description": "",
-  "version": "0.1.2",
+  "description": "云空调，便携小空调",
+  "version": "0.1.3",
   "private": true,
   "author": {
-    "url": "https://www.yunyoujun.cn",
-    "email": "me@yunyoujun.cn",
-    "name": "YunYouJun"
+    "url": "https://www.bjany.ltd",
+    "email": "admin@bjany.ltd",
+    "name": "BJAny"
   },
   "scripts": {
-    "dev": "yarn start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "react/jsx-no-target-blank": 0
-    }
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint \"**/*.{tsx,ts,js}\"",
+    "lint:fix": "eslint \"**/*.{tsx,ts,js}\" --fix"
   },
   "browserslist": {
     "production": [
@@ -36,36 +27,37 @@
       "last 1 safari version"
     ]
   },
-  "repository": {
-    "type": "mail",
-    "url": "mailto:admin@bjany.ltd"
-  },
-  "homepage": "https://bjany.ltd/",
+  "homepage": "https://www.bjany.ltd",
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.35",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.0",
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
-    "@types/react-redux": "^7.1.16",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.2",
+    "@reduxjs/toolkit": "^1.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "sass": "^1.34.1",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "react-ga": "^3.3.0",
+    "react-gtm-module": "^2.0.11",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "sass": "^1.49.7",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@antfu/eslint-config": "^0.16.1",
+    "@iconify-json/mdi": "^1.1.0",
+    "@mui/icons-material": "^5.4.2",
+    "@svgr/core": "^6.2.1",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-gtm-module": "^2.0.1",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "typescript": "^4.5.5",
+    "unplugin-icons": "^0.13.1",
+    "vite": "^2.8.3",
+    "vite-plugin-pwa": "^0.11.13",
+    "vite-plugin-windicss": "^1.7.0"
   }
 }
